<resources>
    <string name="app_name">Quiz</string>
    <string name="easy">Easy</string>
    <string name="so_let_s_get_started_mr">So let\'s get started Mr</string>
    <string name="textview">TextView</string>
    <string name="choose_the_difficulty">Choose the difficulty</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="let_s_play">Let\'s play</string>
    <string name="adminspace">Admin space</string>

    <string name="hey_wanna_play_a_game_what_s_your_name">Hey wanna play a game ? What\'s your name?</string>
    <string name="is_that_is_that_a_supraaa">IS THAT ? IS THAT A SUPRAAA !?</string>
    <string name="todo">TODO</string>
    <string name="yeees_y_win_it_is_a_supraaa">YEEES Y WIN IT IS A SUPRAAA !</string>
    <string name="play_again">Play again ?</string>
    <string name="title_activity_test">Test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_admin_login">AdminLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>