<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DisplayMessageActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/firstRow"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal" >

    <TextView
        android:id="@+id/textSpeech"
        android:layout_width="210dp"
        android:layout_height="27dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/so_let_s_get_started_mr"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/textview"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.684"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="77dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="267dp"
        android:layout_height="46dp"
        android:text="@string/choose_the_difficulty"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="178dp"
        tools:text="Choose the difficulty" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="61dp" />

    <LinearLayout
        android:id="@+id/secondRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonEasy"
            android:onClick="startEasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/easy"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="HardcodedText,MissingConstraints,OnClick,UsingOnClickInXml"
            tools:layout_editor_absoluteY="305dp" />

        <Space
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="306dp" />

        <Space
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:insetLeft="20dp"
            android:text="@string/hard"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="308dp" />
    </LinearLayout>

</LinearLayout>